# hh_vacancy_parser

./: README.md  main.py  pyproject.toml
src/: db_manager.py  entry_with_placeholder.py  utils.py
